# langkit-container-examples

./: .gitignore  Dockerfile  Makefile  README.md  README.md.sub  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: configure-container.yaml
docs/: api.html
examples/configure-container/: Dockerfile  Makefile  README.md  local.env  pyproject.toml
examples/configure-container/.github/workflows/: workflow.yaml
examples/configure-container/whylogs_config/: config.yaml
examples/configure_container_python/: .gitignore  Dockerfile  Makefile  README.md  README.md.sub  local.env  pyproject.toml
examples/configure_container_python/test/: conftest.py  test_container.py
examples/configure_container_python/whylogs_config/: config.py  model-131.yaml
examples/configure_container_yaml/: Dockerfile  Makefile  README.md  local.env  pyproject.toml  pytest.ini
examples/configure_container_yaml/test/: assert_util.py  conftest.py  test_container.py
examples/configure_container_yaml/whylogs_config/: default.yaml  metric_library_pii.yaml  metric_library_regex_groups_pii.yaml  metric_library_regex_pii.yaml  model-134.yaml  model-135.yaml  model-135_pii.yaml  model-139-everything.yaml  model-140-versions.yaml  model-150.yaml  model-150_callbacks.yaml  model-151_multi_col_validation.yaml  model-155.yaml  test_bad_actor_rulesets1.yaml  test_bad_actor_rulesets2.yaml  test_cost_rulesets1.yaml  test_cost_rulesets2.yaml  test_custom_similarity_metrics.yaml  test_customer_experience_rulesets1.yaml  test_customer_experience_rulesets2.yaml  test_hallucination.yaml  test_meta_ruleset_synatx.yaml  test_meta_ruleset_synatx_prompt_only.yaml  test_misuse_rulesets1.yaml  test_misuse_rulesets2.yaml  test_rag_context_prompt.yaml  test_rag_context_response.yaml  test_rulesets_no_block.yaml  test_rulesets_observe.yaml  test_truthfulness_rulesets1.yaml  test_truthfulness_rulesets2.yaml
examples/container_library/: Makefile  README.md  pyproject.toml
examples/container_library/demo/: app.py
examples/container_library/test/: conftest.py  test_container.py
examples/container_library/whylogs_container/whylogs_config/: default.yaml
examples/custom_model/: .gitignore  Dockerfile  Makefile  README.md  local.env  pyproject.toml  requirements.txt
examples/custom_model/test/: conftest.py  test_container.py
examples/custom_model/whylogs_config/: config.py  model-180.yaml
examples/llm_segments/: Dockerfile  Makefile  README.md  README.md.sub  local.env  pyproject.toml
examples/llm_segments/test/: conftest.py  test_container.py
examples/llm_segments/whylogs_config/: config.py  model-170.yaml  model-171.yaml
examples/multi_tenant/: .gitignore  Dockerfile  Makefile  README.md  local.env  pyproject.toml
examples/multi_tenant/test/: assert_util.py  conftest.py  test_container.py
examples/multi_tenant/whylogs_config/: default.yaml  org_1_default.yaml  org_2_default.yaml  org_2_model-2.yaml  org_3_model-1.yaml
examples/no_configuration/: Makefile  README.md  local.env  pyproject.toml
examples/no_configuration/test/: assert_util.py  conftest.py  test_container.py
examples/s3_configuration/: Makefile  README.md  README.md.sub  local.env  pyproject.toml  test.py
examples/s3_configuration/test/: conftest.py  test_container.py
scripts/: download_model.py  send_request.py
whylogs_config/: config.py  config.yaml  emotion_model.py
