[tool.poetry]
name =  "python_container_example"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]
readme = "README.md"
packages = [{include = "python_container_example"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.1"
typing-extensions = "^4.8.0"
mypy = "^1.0.1"
black = "^23.1.0"
requests = "^2.28.2"
types-requests = "^2.28.11.15"

# These are dev dependencies because they're already bundled idn the container
whylogs-container-types = "^0.4.0"
pandas = "1.3.5"
whylogs = {version = "1.3.16.dev0", extras = ["all", "proc"]}
torch = {version = "2.0.1", source = "torch"}
torchvision = {version = "0.15.2", source = "torch"}
torchaudio = {version = "2.0.2", source = "torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
