[tool.poetry]
name =  "python_container_example"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]
readme = "README.md"
packages = [{include = "whylogs_config"}]

[tool.poetry.dependencies]
python = "^3.10"
whylogs-container-types = {url = "https://guest-session-testing-public.s3.us-west-2.amazonaws.com/whylogs_container_types-0.4.2-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
# These are all dev dependencies. They're already included in the container and we don't want to
# overwrite those versions, we just want types and auto completion in this project.
pandas = "1.3.5"
whylogs = {version = "1.3.20", extras = ["proc"]}
whylogs-container-client = "^1.0.1"

pyright = "^1.1.347"
ruff = "^0.1.13"
pytest = "^7.4.4"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["./whylogs_config/**/*.py", "./test/**/*.py"]
typeCheckingMode = "strict"

reportMissingTypeStubs = false
reportMissingParameterType = false
reportMissingTypeArgumet = false

[tool.ruff]
line-length = 140
indent-width = 4
include = ["./whylogs_config/**/*.py", "./test/**/*.py"]
select = ["E", "F", "I", "W"]

[tool.ruff.isort]
known-first-party = ["whylogs", "langkit"]

[tool.ruff.lint]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

