[tool.poetry]
name =  "custom_model"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony@whylabs.ai>"]
readme = "README.md"
packages = [{include = "whylogs_config"}]

[tool.poetry.dependencies]
python = "^3.10"
presidio-analyzer = {extras = ["transformers"], version = "^2.2.352"}
presidio-anonymizer = "^2.2.352"
# The LLM container deploys with pytorch 2.0.0, so depend on that here to make sure we don't end up
# upgrading to a version that isn't compatible with the container. Python dependencies can be a mess, especially 
# with regard to pytorch. In the end, if it works then it works though -- torch 2.0.0 is just known to work at the moment.
torch = {version = "2.0.0", optional = true, source = "torch"}

[tool.poetry.group.dev.dependencies]
# These are all dev dependencies. They're already included in the container and we don't want to
# overwrite those versions, we just want types and auto completion in this project.
langkit = "0.0.28.dev0"
whylogs-container-types = "0.4.13"
whylogs-container-client = "1.0.13"
pandas = "1.3.5"

pyright = "^1.1.347"
ruff = "^0.1.13"
pytest = "^7.4.4"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["./whylogs_config/**/*.py", "./test/**/*.py"]
typeCheckingMode = "strict"

reportMissingTypeStubs = false
reportMissingParameterType = false
reportMissingTypeArgumet = false

[tool.ruff]
line-length = 140
indent-width = 4
include = ["./whylogs_config/**/*.py", "./test/**/*.py"]
select = ["E", "F", "I", "W"]

[tool.ruff.isort]
known-first-party = ["whylogs", "langkit"]

[tool.ruff.lint]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

